--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # MySQL Connection
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/garlands
+spring.datasource.url=jdbc:mysql://localhost:3306/yourdatabasename
 spring.datasource.username=root
-spring.datasource.password=masnico123
+spring.datasource.password=yourpassworddatabase
 
 # Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # JWT Secret Key
-jwt.secret=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9wer3aw2e
+jwt.secret=youruniqtoken
