Update for UserMapper also add depedencies mapstruct

--- a/pom.xml
+++ b/pom.xml
@@ -105,12 +105,20 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- payments -->
-<!--		<dependency>-->
-<!--			<groupId>com.paypal.sdk</groupId>-->
-<!--			<artifactId>rest-api-sdk</artifactId>-->
-<!--			<version>1.14.0</version>-->
-<!--		</dependency>-->
+		<!-- MapStruct -->
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.4.2.Final</version>
+		</dependency>
+		<!-- MapStruct Annotation Processor (for generating code) -->
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-processor</artifactId>
+			<version>1.4.2.Final</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
